--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lucide/lab": "^0.1.2",
+    "@react-native-community/datetimepicker": "^8.5.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.1",
     "@react-navigation/elements": "^2.8.1",
