--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@lucide/lab": "^0.1.2",
     "@react-native-community/datetimepicker": "^8.5.0",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.1",
     "@react-navigation/elements": "^2.8.1",
