--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>233810284813-hn0ktrjek1tauafnqva6sapr1aoi6bvu.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.233810284813-hn0ktrjek1tauafnqva6sapr1aoi6bvu</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBmzmrpgVWYhiumHklhiRNxh6XT9FYO9EY</string>
 	<key>GCM_SENDER_ID</key>
@@ -26,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:233810284813:ios:2ecad6746cb7354783e044</string>
+	<key>DATABASE_URL</key>
+	<string>https://simpletodo-react-native-default-rtdb.asia-southeast1.firebasedatabase.app</string>
 </dict>
 </plist>
